--- a/ejb-throws-exception/pom.xml
+++ b/ejb-throws-exception/pom.xml
@@ -48,12 +48,12 @@
             BOM -->
         <!-- Define the version of JBoss' Java EE 6 APIs and Tools we want 
             to import. -->
-        <version.jboss.bom.eap>6.2.0-build-SNAPSHOT</version.jboss.bom.eap>
+        <version.jboss.bom.eap>6.2.0.GA</version.jboss.bom.eap>
 
         <!-- JBoss dependency versions -->
         <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
 
-        <version.jboss.as>7.3.0.Final-redhat-SNAPSHOT</version.jboss.as>
+        <version.jboss.as>7.3.0.Final-redhat-14</version.jboss.as>
 
         <version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-7</version.jboss.spec.javaee.6.0>
 
